# vlrdevapi

./: .coderabbit.yaml  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  README.md  SECURITY.md  SUPPORT.md  main.py  matches.csv  pyproject.toml  vlrdevapi_issues.md  wrangler.jsonc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-betterdocs.yml  docs-check.yml  publish-to-pypi.yml  publish.yml  test.yml  validate-betterdocs.yml  validate-docs.yml
betterdocs/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  source.config.ts
betterdocs/app/: layout.tsx  sitemap.ts
betterdocs/components/: installation-command.tsx  search.tsx  tabs.unstyled.tsx
betterdocs/content/: getting-started.mdx  index.mdx  installation.mdx
betterdocs/lib/: layout.shared.tsx
betterdocs/scripts/: generate-raw-mdx.mjs
betterdocs/src/: routeTree.gen.ts  router.tsx  start.ts
docs/: requirements.txt
docs-py/: zensical.toml
docs-py/docs/: index.md
docs/source/: conf.py  config.rst  constants.rst  contributing.rst  examples.rst  index.rst  installation.rst  keywords.rst  performance.rst  quickstart.rst  rate-limiting.rst
official-docs/: README.md  components.json  next.config.mjs  package-lock.json  package.json  skills-lock.json  source.config.ts
official-docs/app/: global.css  layout.tsx  opengraph-image.tsx  robots.ts  sitemap.ts
official-docs/components/: analytics.tsx  copy-button.tsx  cta.tsx  logo.tsx  mdx-content.tsx  mdx.tsx  og-template.tsx  toc-layout.tsx  toc.tsx  type-table.tsx
official-docs/lib/: content.ts  shared.ts  shiki.ts  source.ts
scripts/: check_mdx_examples.py  download_fixtures.py  validate_betterdocs_snippets.py  validate_doc_snippets.py
tests/: conftest.py  test_type_stubs.py
(+466 files in other folders)
